# DAH_temp

./: .gitignore  CLAUDE.md  Dockerfile  README.md  README_SERVICE.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: attack_ranking.md  attack_references.md  attack_scenarios.md  bidirectional_mavlink_gateway_stage.md  dah_prelim_brief.md  dah_uas_gcs_protocol_monitor_plan.md  docker_desktop_runbook.md  edge_device_integration_stage.md  korea_defense_uas_upgrade.md  korean_defense_contractor_alignment.md  log_storage_system.md  mavlink_gateway_stage.md  mission_command_gateway_stage.md  multisource_track_fusion_stage.md  repo_gap_analysis.md  scenarios.md  server_operation_briefing.md  server_operation_detailed_briefing.md  service_map.md  sitl_connection_guide.md  source_learning_notes.md  stack_and_harness_plan.md  uas_real_system_roadmap.md  uas_utm_environment_stages.md  uas_utm_service_protocol.md  vulnerabilities.md
scenarios/: korea_defense_uas_utm_ops.json  normal_utm_ops.json  uav_ugv_convoy.json
scenarios/dah_training/: mavlink_telemetry_monitoring.json  mission_upload_guard.json  tactical_chain_degradation.json
scenarios/templates/: uav_ugv_joint_recon.json
scripts/: check_kali_runtime.sh  export_uas_utm_baseline.ps1  run_harness.ps1  run_mavlink_smoke_test.ps1  run_uas_utm.ps1  run_uas_utm_bidir_gateway.ps1  run_uas_utm_edge.ps1  run_uas_utm_gateway.ps1  run_uas_utm_service.ps1
src/dah_attacks/: alert_fatigue_attack.py  attack_runner.py  audit_flood_attack.py  battery_crisis_attack.py  cmd_inject_attack.py  common.py  dynamic_spoof_attack.py  edge_work_snooping_attack.py  fdi_fusion_attack.py  geofence_inject_attack.py  gnss_drift_attack.py  link_degrade_attack.py  mimicry_attack.py  mission_queue_exhaust_attack.py  multi_vector_blitz_attack.py  passive_mavlink_recon.py  priority_escalation_attack.py  recon_attack.py  sybil_fleet_attack.py  sync_disrupt_attack.py  timestamp_rollback_attack.py
src/dah_harness/: __init__.py  attacks.py  cli.py  defense.py  metrics.py  models.py  protocol_monitor.py  simulation.py  tactical_emulator.py
src/dah_runtime/: event_bus.py  health.py  jsonl_store.py  reverse_proxy.py  role_service.py  service_contracts.py
src/dah_services/: common.py  dashboard_service.py  defense_agent_service.py  fault_injector_service.py  gcs_service.py  tactical_router_service.py  telemetry_collector_service.py  ticn_emulator_service.py  tmmr_emulator_service.py  uav_sim_service.py  ugv_sim_service.py  upper_c2_service.py
src/uas_utm/: __init__.py  airspace.py  cli.py  mavlink_adapter.py  models.py  scenario_batch.py  scenario_briefing.py  scenario_package.py  scenario_report.py  scenario_tools.py  simulator.py  utm_service.py
src/uas_utm_edge/: __init__.py  agent.py  registry.py
src/uas_utm_gateway/: __init__.py  bidirectional_gateway.py  ingest_client.py  mavlink_builder.py  mavlink_parser.py  mock_smoke_test.py  service_client.py  translator.py  udp_gateway.py
src/uas_utm_service/: __init__.py  baseline_export.py  log_store.py  mavlink_broadcaster.py  protocol.py  server.py  state.py
src/uas_utm_service/static/: app.js  index.html  styles.css
tests/: test_baseline_export.py  test_dah_runtime_services.py  test_harness.py  test_korea_defense_uas.py  test_passive_mavlink_recon.py  test_phase8_integration.py  test_phase9_runnable.py  test_protocol_monitor.py  test_scenario_package.py  test_scenario_tools.py  test_tactical_emulator.py  test_uas_utm.py  test_uas_utm_gateway.py  test_uas_utm_service.py
