[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dah-smu-harness"
version = "0.1.0"
description = "UAV/UGV cyber defense and UAS/UTM virtual service for DAH 2026"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
dah-harness = "dah_harness.cli:main"
uas-utm = "uas_utm.cli:main"
uas-utm-service = "uas_utm_service.server:main"
uas-utm-gateway = "uas_utm_gateway.udp_gateway:main"
uas-utm-bidir-gateway = "uas_utm_gateway.bidirectional_gateway:main"
uas-utm-edge = "uas_utm_edge.agent:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dah_harness = ["py.typed"]
uas_utm = ["py.typed"]
uas_utm_service = ["static/*.html", "static/*.css", "static/*.js"]

