[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dah-smu-harness"
version = "0.1.0"
description = "UAV/UGV cyber defense and UAS/UTM virtual service for DAH 2026"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
dah-harness = "dah_harness.cli:main"
uas-utm = "uas_utm.cli:main"
uas-utm-scenario-report = "uas_utm.scenario_report:main"
uas-utm-scenario-package = "uas_utm.scenario_package:main"
uas-utm-scenario-batch = "uas_utm.scenario_batch:main"
uas-utm-scenario-briefing = "uas_utm.scenario_briefing:main"
uas-utm-service = "uas_utm_service.server:main"
uas-utm-baseline-export = "uas_utm_service.baseline_export:main"
uas-utm-gateway = "uas_utm_gateway.udp_gateway:main"
uas-utm-bidir-gateway = "uas_utm_gateway.bidirectional_gateway:main"
uas-utm-mavlink-smoke = "uas_utm_gateway.mock_smoke_test:main"
uas-utm-edge = "uas_utm_edge.agent:main"
dah-gcs-service = "dah_services.gcs_service:main"
dah-uav-sim-service = "dah_services.uav_sim_service:main"
dah-ugv-sim-service = "dah_services.ugv_sim_service:main"
dah-dashboard-service = "dah_services.dashboard_service:main"
dah-tactical-router-service = "dah_services.tactical_router_service:main"
dah-tmmr-emulator-service = "dah_services.tmmr_emulator_service:main"
dah-ticn-emulator-service = "dah_services.ticn_emulator_service:main"
dah-upper-c2-service = "dah_services.upper_c2_service:main"
dah-telemetry-collector-service = "dah_services.telemetry_collector_service:main"
dah-defense-agent-service = "dah_services.defense_agent_service:main"
dah-fault-injector-service = "dah_services.fault_injector_service:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dah_harness = ["py.typed"]
uas_utm = ["py.typed"]
uas_utm_service = ["static/*.html", "static/*.css", "static/*.js"]

